28-03-2013 4.1.51
- Holidays could be generated on the wrong day
- Appointment invitations could have a confusing "Update event" link.
- redirect email filters had an input for multiple addresses but this is not supported by sieve
- Some messages were not displayed because they had body tags in the middle of an html message
- Show timeout error instead of JsonStore load exception
- GO will recognize IE10 as Internet Explorer browser isInternetExplorer() will return true
- Download filenames with UTF-8 character in IE10 will work as expected
- Reset password was broken
- removed time before tasks and birthday events in the calendar's month view
- Cron: enabling the users and group tabs when clicking on apply will now work.
- MultiSelectGrid will check for an ACL field in the linked model if $checkPermissions is not provided
- TimerButton didn't load time from database on reload the way it should (fixed)
- Billing, duplicate order: No more link between original order and duplicate order.
- Billing, recurring order: Link between original order and recurring order created on status change.
- Updated German language
- Config::get_setting() will return null of the config option is not yet in the database
- DbStore can attach extra PK values for the deletion of records with an PK of multiple columns
- Ticket dialog will clear the attachments queue after show or load
- Calculate mail usage in About dialog too.
- Comments and files are copied when you merge an item without deleting the source item.
- Always cache search results in default system language
- Hide disabled custom field categories in the display of contacts and companies

24-03-2013 4.1.50
- Ticket module kept hanging in the weekend.

24-03-2013 4.1.49
- Bug in ActiveRecord
- Move appointment with right click could create a corrupted unremovable appointment

22-03-2013 4.1.48 (Not released)
- When GroupOffice renders the Timer button it checks if it was already running and adjusts the button accordingly